feat: Revamp app to create a Squid Game themed wealth dashboard
- Updated manifest.json to reflect new app name, description, and theme colors.
- Refactored script.js to implement a new navigation system and wealth visibility toggle.
- Introduced game-themed features and animations for investment cards and actions.
- Enhanced styles in styles.css for a dark theme with Squid Game aesthetics.
- Added responsive design adjustments and loading animations.

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "SecureBank - Digital Banking",
-  "short_name": "SecureBank",
+  "name": "Squid Game Wealth Dashboard",
+  "short_name": "SquidWealth",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#1a365d",
-  "theme_color": "#1a365d",
-  "description": "Secure digital banking experience with modern features",
+  "background_color": "#000000",
+  "theme_color": "#ff4757",
+  "description": "Your personal Squid Game themed wealth dashboard - May the odds be in your financial favor",
   "icons": [
     {
       "src": "icon-192.png",
@@ -23,8 +23,13 @@
       "type": "image/png"
     }
   ],
-  "categories": ["finance", "productivity"],
-  "lang": "en",
-  "dir": "ltr",
-  "orientation": "portrait"
+  "categories": ["finance", "lifestyle", "entertainment"],
+  "screenshots": [
+    {
+      "src": "screenshot-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ]
 }
